# mixa

./: .gitignore  AUTHORS  ChangeLog  README.md  configure.ac  meson.build  meson.options
res/: Makefile.am  abt-dlg.ui  meson.build  mixa.desktop  mixa.desktop.in  mixa.gresources.xml
src/: AlsaCard.cpp  AlsaCard.hpp  AlsaControl.cpp  AlsaControl.hpp  AlsaElement.cpp  AlsaElement.hpp  AlsaEvents.cpp  AlsaEvents.hpp  AlsaMixer.cpp  AlsaMixer.hpp  CardFrame.cpp  CardFrame.hpp  ControlComponents.cpp  ControlComponents.hpp  ElementComponent.cpp  ElementComponent.hpp  Keybind.cpp  Keybind.hpp  Makefile.am  MixaApp.cpp  MixaApp.hpp  MixaAppWindow.cpp  MixaAppWindow.hpp  ModeComponent.cpp  ModeComponent.hpp  meson.build
