
sources = files(
     'MixaApp.cpp'
    ,'MixaAppWindow.cpp'
    ,'CardFrame.cpp'
    ,'AlsaCard.cpp'
    ,'AlsaMixer.cpp'
    ,'AlsaElement.cpp'
    ,'AlsaControl.cpp'
    ,'AlsaEvents.cpp'
    ,'ModeComponent.cpp'
    ,'ControlComponents.cpp'
    ,'ElementComponent.cpp'
    )

if get_option('keybind')
    sources  += files(
	'Keybind.cpp'
        )
endif
